# sisyphus-fpga24-artifact

./: README.md
bitstream/: README.md
bitstream/autodse/2mm/: prometheus.sh
bitstream/autodse/2mm/FPGArpt/: csynth.rpt  csynth_design_size.rpt  kernel_nlp_Pipeline_L21_csynth.rpt  kernel_nlp_Pipeline_L22_csynth.rpt  kernel_nlp_Pipeline_L23_csynth.rpt  kernel_nlp_Pipeline_L24_csynth.rpt  kernel_nlp_Pipeline_L2_csynth.rpt  kernel_nlp_Pipeline_L35_csynth.rpt  kernel_nlp_Pipeline_L3_csynth.rpt  kernel_nlp_Pipeline_merlinL2_merlinL1_csynth.rpt  kernel_nlp_Pipeline_merlinL4_csynth.rpt  kernel_nlp_csynth.rpt
bitstream/autodse/2mm/src/: csim.cpp  host.cpp  kernel_2mm.tcl  output.cpp  output.h
bitstream/autodse/2mm/tcl_scripts/: phys_opt_loop.tcl  post_place_qor.tcl
bitstream/autodse/3mm/FPGArpt/: csynth.rpt  csynth_design_size.rpt  kernel_nlp_Pipeline_L21_csynth.rpt  kernel_nlp_Pipeline_L22_csynth.rpt  kernel_nlp_Pipeline_L23_csynth.rpt  kernel_nlp_Pipeline_L24_csynth.rpt  kernel_nlp_Pipeline_L25_csynth.rpt  kernel_nlp_Pipeline_L26_csynth.rpt  kernel_nlp_Pipeline_L2_csynth.rpt  kernel_nlp_Pipeline_L37_csynth.rpt  kernel_nlp_Pipeline_L38_csynth.rpt  kernel_nlp_Pipeline_L3_csynth.rpt  kernel_nlp_Pipeline_merlinL1_csynth.rpt  kernel_nlp_Pipeline_merlinL6_merlinL5_csynth.rpt  kernel_nlp_Pipeline_merlinL8_csynth.rpt  kernel_nlp_csynth.rpt
bitstream/autodse/3mm/src/: host.cpp  kernel_3mm.tcl  (+2 more)
bitstream/sisyphus/2mm/: prometheus.sh
vitis/: README.md
vitis/AutoDSE/: extract.py
vitis/nlp-dse-with-tree/: extract.py
vitis/nlp-dse-without-tree/: extract.py  launch.py
(+10546 files in other folders)
